tests/errors/parser/cell-missing-semi.expect
---CODE---
1
---STDERR---
Error: FuTIL Parser:  --> 4:5
  |
4 |     h = prim std_reg(32)␊
5 |     l = prim std_reg(32);␊
  |     ^
  |
  = Declaration is missing `;`
